move v1_2_3 tag